Homework 5 completed plus bonuses :)

--- a/homework/MoviesApp/app/views/layouts/application.html.erb
+++ b/homework/MoviesApp/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <header>
     <h1>NU Movie Database</h1>
+    <h3>The header is shown on every page, and is in apps -> views -> layouts - application.html.erb</h3>
     <nav>
       <%= link_to "Movies", '/movies' %>
       <%= link_to "Theaters", '/theaters' %>
