--- a/homework/MoviesApp/app/views/theaters/new.html.erb
+++ b/homework/MoviesApp/app/views/theaters/new.html.erb
@@ -3,12 +3,12 @@
 <%= form_tag("/theaters") do %>
 
   <div>
-    <%= label_tag :name %><br />
+    <%= label_tag :name %></br>
     <%= text_field_tag :name, "", size: 80 %>
   </div>
 
     <div>
-    <%= label_tag :address %><br />
+    <%= label_tag :address %></br>
     <%= text_field_tag :address, "", size: 80 %>
   </div>
 
