--- a/homework/MoviesApp/app/views/theaters/show.html.erb
+++ b/homework/MoviesApp/app/views/theaters/show.html.erb
@@ -11,5 +11,7 @@
   <%= @theater.address %>
 </p>
 
+<p><b>How map?</b> = map is shown with render map, and then opens _map.html.erb. <br>
+Then uses a "uri" to show address in a google map...  and it works!  Very cool!</p>
 
 <%= render 'map' %>
